# fastapp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/: conftest.py
src/app/: constants.py  main.py  manage.py  utils.py
src/app/constants/: base.py
src/app/db/: connections.py  postgres.py
src/app/db/repositories/: base.py
src/app/routes/: base.py
src/app/routes/dependencies/: db.py
src/app/schemas/: base.py
src/app/settings/: __init__.py  base.py
src/tests/: conftest.py  test_api.py
src/tests/utils/: db.py
